tmc-langs-qmake/src/test/resources/invalid_quick_project/src/Clicker.qml
import QtQuick 2.9

Item {
    // dummy item
}
